--- a/index.html
+++ b/index.html
@@ -423,9 +423,6 @@
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
                 <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
               </div>
             </div>
@@ -439,18 +436,6 @@
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
-              </div>
             </div>
           </div>
         </div>
@@ -461,19 +446,10 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
-              </div>
-              <div class="col s4 m2">
                 <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
@@ -494,9 +470,6 @@
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
               </div>
             </div>
           </div>
@@ -549,11 +522,11 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="teal-text hoverline">University of Toronto</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Toronto, Canada</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Bachelors of Applied Science in Computer Engineering      
                   <br>
                   <b>CGPA: </b>4.0/4.0
                 </p>
@@ -562,9 +535,9 @@
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Software Communication and Design</li>
+                    <li>Engineering Stragies and Practices</li>
+                    <li>Computer Fundamentals</li>                    
                   </ul>
                   </p>
 
@@ -573,36 +546,6 @@
             </div>
 
             
-          </div>
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
-                <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
-                </p>
-                <p class="brown-text">Ahmedabad, India</p>
-                <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
-                  <br>
-                  <b>CGPA: </b>3.13/4.33
-                </p>
-
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
-
-                </ul>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -615,27 +558,27 @@
         <p>
           <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Varad">+16475643509</a></a>
         </p>
         <p>
           <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="hoverline">arnauvgilotra@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Varad on GitHub" href="http://github.com/arnauvgilotra" target="_blank"
+            data-position="top" data-tooltip="View Arnauv on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Arnauv on Github" href="http://github.com/arnauvgilotra" class="hoverline"
+              target="_blank">github.com/arnauvgilotra</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Arnauv on LinkedIn" href="https://www.linkedin.com/in/arnauv-g/" target="_blank"
+            data-position="top" data-tooltip="View Arnauv on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Arnauv on LinkedIn" href="https://www.linkedin.com/in/arnauv-g/"
+              class="hoverline" target="_blank">linkedin.com/in/arnauv-g/</a></a>
         </p>
       </div>
     </section>
