--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Arnauv Gilotra | Product Leader</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -79,7 +79,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/mypic.png" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/Mypic.png" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -141,7 +141,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Arnauv's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/resume.pdf" target="_blank"
+        <a aria-label="Open Arnauv's resume in a new tab" href="https://arnauvgilotra.github.io/assets/resume/resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -188,7 +188,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Arnauv's Resume in a new tab"
-          href="https://varadbhogayata.github.io/assets/resume/resume.pdf" target="_blank"
+          href="https://arnauvgilotra.github.io/assets/resume/resume.pdf" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
