--- a/index.html
+++ b/index.html
@@ -354,13 +354,13 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="music streaming app" src="/assets/img/MAX.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Music Player Web-App<i
+                <span class="card-title activator teal-text hoverline">Mapper Max<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A music streaming web app based on Django
+                  Ai Powered GIS software for students
                 </p>
               </div>
               <div class="card-reveal">
@@ -369,11 +369,11 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Search and filter songs based on language and singer.</li>
-                  <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                  <li>Scroll through recently played/viewed songs.</li>
+                  <li><b>Tools:</b> Python, C++, GTK3, CSS, GPT</li>
+                  <li>Set up your day based on where you have to be</li>
+                  <li>Find the shortest & fastest route.</li>
+                  <li>Mordern minimalist design</li>
+                  <li>Find Clubs, food location, libraries around you</li>
 
 
                 </ul>
