--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Arnauv Gilotra</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#003440"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Amalgamation of product vision and technical skills. I build products that help create value for the end user and business alike.</h5>
             </div>
