--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
       </li>
 
       <li class="bold">
+        <!-- 
+        1. mdi-communication-contacts
+        2. mdi-content-mail
+        3. mdi-communication-email
+        -->
+        <a aria-label="Navigate to the Contact section" href="#location" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+      </li>
+
+      <li class="bold">
         <!--
         ICONS:
         1. mdi-action-description
@@ -185,6 +195,10 @@
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Contact section" href="#location" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Place Travelled</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Arnauv's Resume in a new tab"
@@ -577,6 +591,25 @@
         </p>
       </div>
     </section>
+
+    <!--Section with a google map embed-->
+    <section id="location" class="section scrollspy">
+      <h3 class="page-title white-text teal">Place Travelled</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col s12">
+            <div class="card-panel">
+              <div class="row">
+                <div class="col s12">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.422128080789!2d-79.3987526845282!3d43.6628919791192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x1b3d9c8d9f9d9b3d!2sUniversity%20of%20Toronto!5e0!3m2!1sen!2sca!4v1631719357439!5m2!1sen!2sca" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
   </main>
 
   <!-- typed.js -->
