--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             <div class="card-panel">
               <div class="row">
                 <div class="col s12">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.422128080789!2d-79.3987526845282!3d43.6628919791192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x1b3d9c8d9f9d9b3d!2sUniversity%20of%20Toronto!5e0!3m2!1sen!2sca!4v1631719357439!5m2!1sen!2sca" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                  <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1FaUQV455d8NhrUNp42MQtkolfhnfd0w&ehbc=2E312F" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
               </div>
             </div>
