--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#location" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Place Travelled</span></a>
+          class="mdi-maps-place small"></i><span>Places Travelled</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Arnauv's Resume in a new tab"
@@ -218,7 +218,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Arnauv Gilotra</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#003440"></span></h5>
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#ffffff"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Amalgamation of product vision and technical skills. I build products that help create value for the end user and business alike.</h5>
             </div>
@@ -276,7 +276,8 @@
         </p>
         <p>
           <ul>
-            <li><b>Key Skills:</b> Agile Product Development, Stakeholder Management, Product Roadmaps, A/B Testing, Cross-Functional Leadership, Data-Driven Decision Making,</li>
+            <li><b>Key Skills:</b> Agile Product Development, Stakeholder Management, Product Roadmaps, A/B Testing, Cross-Functional Leadership, Data-Driven Decision Making, UserTesting</li>
+            <li><b>AI Models:</b> Stable Diffusion, LLama, GPT, GPT-V</li>
             <li><b>Languages:</b> C, C++, Dart, Python, HTML/CSS/JS</li>
             <li><b>Databases:</b> MySQL</li>
             <li><b>Libraries:</b> NumPy, Open AI, Dreambooth</li>
@@ -594,7 +595,7 @@
 
     <!--Section with a google map embed-->
     <section id="location" class="section scrollspy">
-      <h3 class="page-title white-text teal">Place Travelled</h3>
+      <h3 class="page-title white-text teal">Places Travelled</h3>
       <div class="container">
         <div class="row">
           <div class="col s12">
