--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         3. mdi-communication-email
         -->
         <a aria-label="Navigate to the Contact section" href="#location" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+            class="mdi-maps-place small"></i><span>Places Travelled</span></a>
       </li>
 
       <li class="bold">
